Fixed linux invoker